# image_gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/image_gen/: __init__.py  __main__.py  cli.py  exceptions.py
src/image_gen/backends/: __init__.py  base.py  gemini_backend.py  openai_backend.py
tests/: __init__.py  conftest.py  test_cli.py
